# jiraboard

./: LICENSE  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_user_boards.py  0003_alter_user_boards.py  0004_remove_user_boards_user_boards.py  0005_alter_user_boards.py  0006_alter_user_boards.py
jiraboard/: asgi.py  settings.py  urls.py  wsgi.py
