[tool.poetry]
name = "jiraboard"
version = "0.1.0"
description = ""
authors = ["Brian <yes229@nyu.edu>", "Matt <mrz262@stern.nyu.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
